@@ -1,3 +1,10 @@
+2005-10-07  Ross Burton  <ross@burtonini.com>
+
+	* configure.in:
+	* src/sound-juicer.h:
+	* src/sj-main.c:
+	Add --enable-debug and start using it.
+
 2005-10-03  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
